@@ -85,7 +85,7 @@ ftp_read_data(struct vsf_session* p_sess, char* p_buf, unsigned int len)
     priv_sock_send_cmd(p_sess->ssl_consumer_fd, PRIV_SOCK_DO_SSL_READ);
     ret = priv_sock_get_int(p_sess->ssl_consumer_fd);
     priv_sock_recv_buf(p_sess->ssl_consumer_fd, p_buf, len);
-    // Need to do this here too because it is useless in the slave process.
+    /* Need to do this here too because it is useless in the slave process. */
     vsf_sysutil_check_pending_actions(kVSFSysUtilIO, ret, p_sess->data_fd);
     return ret;
   }
@@ -109,7 +109,7 @@ ftp_write_data(const struct vsf_session* p_sess, const char* p_buf,
     priv_sock_send_cmd(p_sess->ssl_consumer_fd, PRIV_SOCK_DO_SSL_WRITE);
     priv_sock_send_buf(p_sess->ssl_consumer_fd, p_buf, len);
     ret = priv_sock_get_int(p_sess->ssl_consumer_fd);
-    // Need to do this here too because it is useless in the slave process.
+    /* Need to do this here too because it is useless in the slave process. */
     vsf_sysutil_check_pending_actions(kVSFSysUtilIO, ret, p_sess->data_fd);
     return ret;
   }
